# QG-C

./: .gitignore
Week_1/doubleLinkList/: CMakeLists.txt  README.md
Week_1/doubleLinkList/Headers/: linkedList.h  linkedListAddition.h
Week_1/doubleLinkList/Sources/: linkedListAddition.c  linklist.c  main.c
Week_1/linkList/: CMakeLists.txt
Week_1/linkList/Headers/: linkedList.h  linkedList.h.gch  linkedListAddition.h
Week_1/linkList/Sources/: linkedListAddition.c  linklist.c  main.c
Week_2/Calculator/: CMakeLists.txt  README.md
Week_2/Calculator/Headers/: Calculator.h  LinkedList.h
Week_2/Calculator/Sources/: Calculator.c  LinkedList.c  main.c
Week_2/LinkStack/: CMakeLists.txt
Week_2/LinkStack/Headers/: LinkStack.h
Week_2/LinkStack/Sources/: LinkStack.c  LinkedList.c  main.c
